# training-sqlalchemy

./: README.md  example01.db  example01.py  product_hub.db  pyproject.toml
src/: main.py
src/core/: database.py  models.py
src/seeds/: products.py  suppliers.py
